--- a/Week3/website/styles.css
+++ b/Week3/website/styles.css
@@ -5,3 +5,36 @@ body{
 h1{
     color: rgb(7, 1, 1);
 }
+
+.navBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: #333;
+    
+}
+
+.navBar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navBar li {
+    padding: 10px 20px;
+    
+}
+
+.navBar li a {
+    text-decoration: none;
+    color: #fff;
+    
+}
+
+.softwareSkills {
+    display: flex;
+    flex-direction: column;
+    background-color: #333;
+    color: #fff;
+
+}
